--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-scripts": "3.4.1",
     "typewriter-effect": "^2.13.1"
   },
