--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "i": "^0.3.6",
     "npm": "^6.14.7",
@@ -15,6 +16,7 @@
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-responsive": "^8.1.0",
     "react-scripts": "3.4.1",
     "typewriter-effect": "^2.13.1"
   },
