--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/DarrenVictoriano/Pahina#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
