--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
-    "i": "^0.3.6",
-    "npm": "^6.14.7",
+    "markdown-to-jsx": "^6.11.4",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^4.3.1",
+    "react-moment": "^0.9.7",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
