--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "3.4.1",
     "react-syntax-highlighter": "^13.3.1",
     "react-textarea-autosize": "^8.2.0",
+    "react-transition-group": "^4.4.1",
     "typewriter-effect": "^2.13.1"
   },
   "scripts": {
